# playwright-har-tracer

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: main.py  record_remote_ip_address.py
playwright_har_tracer/: __init__.py  constants.py  encoders.py  har_tracer.py  utils.py
playwright_har_tracer/dataclasses/: __init__.py  cdp.py  har.py  mixin.py
tests/: conftest.py  test_dataclass.py  test_encoders.py  test_mixin.py  test_playwright_har_tracer.py  test_utils.py  utils.py
tests/fixtures/: test.har
tests/har_tracer/: test_cookie.py  test_har_tracer.py  test_post_data.py  test_query_params.py  test_redirect.py  test_response_received_event_tracing.py
